# unio

./: .gitignore  AGENTS.md  CHANGE.md  Cargo.toml  PLAN.md  README.md  context.py  how-long-contexts-fail-summary.md  recact.py  tool.py  目标.md
.github/workflows/: deploy-site.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: lib.rs  main.rs
arti_doc/: README.md
arti_doc/en/: 01-overview.md  02-technical-architecture.md  03-functional-modules.md  04-usage-guide.md  05-technical-introduction.md
arti_doc/zh/: 01-overview.md  02-technical-architecture.md  03-functional-modules.md  04-usage-guide.md  05-technical-introduction.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
docs/: README.md  arti-doc-report-spec.md  book.toml  documentation-refresh.md  get-started.md  real-model-e2e-test-report.md  real-model-e2e-test-spec.md
docs/architecture/: README.md  hybrid-file-references.md  hybrid-input-editing.md
docs/current-state/: README.md
docs/decisions/: 0001-start-from-zero.md  0003-storage-contract.md
docs/po/: zh-CN.po
docs/src/: SUMMARY.md  architecture.md  cli.md  development.md  download.md  get-started.md  hybrid-slash-commands.md  install.md  overview.md  quickstart.md  release.md  site-operations.md  skills.md  tools-and-approvals.md
docs/src/decisions/: 0002-domain-crate-boundaries.md
docs/target-architecture/: README.md
docs/theme/: head.hbs
docs/zh/: book.toml
docs/zh/src/: SUMMARY.md  architecture.md  cli.md  development.md  download.md  get-started.md  hybrid-file-references.md  hybrid-input-editing.md  hybrid-slash-commands.md  install.md  overview.md  quickstart.md  release.md  site-operations.md  skills.md  target-architecture.md  tools-and-approvals.md
docs/zh/src/decisions/: 0001-start-from-zero.md  0002-domain-crate-boundaries.md  0003-storage-contract.md
