[workspace]
members = [
    "apps/cli",
    "apps/daemon",
    "crates/agent",
    "crates/core",
    "crates/model",
    "crates/observability",
    "crates/protocol",
    "crates/security",
    "crates/skills",
    "crates/storage",
    "crates/tools",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "json", "http1", "tokio"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "net", "process"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4", "serde"] }
