[package]
name = "unio-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
unio-agent = { path = "../../crates/agent" }
unio-core = { path = "../../crates/core" }
unio-model = { path = "../../crates/model" }
unio-observability = { path = "../../crates/observability" }
unio-protocol = { path = "../../crates/protocol" }
unio-storage = { path = "../../crates/storage" }
unio-tools = { path = "../../crates/tools" }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
