[package]
name = "unio-model"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
unio-core = { path = "../core" }
unio-tools = { path = "../tools" }
uuid = { workspace = true }
