[package]
name = "unio-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unio-core = { path = "../core" }
unio-security = { path = "../security" }
unio-protocol = { path = "../protocol" }
unio-skills = { path = "../skills" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
